welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(porteBiscuit==False){
if (estSurBiscuit==false) {
	avance();
}else{
	prendBiscuit();recule()
	
}
}